--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,12 @@
-attrs==24.2.0
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
-colorama==0.4.6
-distlib==0.3.9
-filelock==3.16.1
-gunicorn==23.0.0
-h11==0.14.0
-idna==3.10
-iniconfig==2.0.0
-Jinja2==3.1.4
-MarkupSafe==3.0.2
-outcome==1.3.0.post0
-packaging==24.2
-platformdirs==4.3.6
-pluggy==1.5.0
-pycparser==2.22
-PySocks==1.7.1
-pytest==8.3.3
-pytest-html==4.1.1
-pytest-metadata==3.1.1
-requests==2.32.3
-selenium==4.27.1
-sniffio==1.3.1
-sortedcontainers==2.4.0
-trio==0.27.0
-trio-websocket==0.11.1
+asgiref==3.8.1
+Brotli==1.1.0
+dj-database-url==2.3.0
+Django==5.1.4
+djangorestframework==3.15.2
+psycopg2-binary==2.9.10
+sqlparse==0.5.3
 typing_extensions==4.12.2
-urllib3==2.2.3
-virtualenv==20.28.1
-websocket-client==1.8.0
-wsproto==1.2.0
+tzdata==2024.2
+whitenoise==6.8.2
+gunicorn==23.0.0
+
